HelloUltraviolet/Fixtures/RejectedSource/Attributes/UnknownAttribute/Source/Main.uv
//! Rejected attribute specimen for an unknown attribute name.

[[definitely_unknown_attribute]]
public procedure unknownAttributeReference() -> i32 {
    return 1
}
